pilot/config/test/CDS.yaml
- name: some_service
  connect_timeout: 0.25s
  type: STRICT_DNS
  lb_policy: ROUND_ROBIN
  hosts:
    - socket_address:
        address: proxy-node1
        port_value: 80
    - socket_address:
        address: proxy-node2
        port_value: 80
