pilot/config/test/LDS.yaml
- name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 6002
  filter_chains:
    - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: some_service
            http_filters:
              - name: envoy.router
